# claude-toad

./: .npmignore  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  tsup.config.ts
.claude/: CLAUDE.md  settings.json
.claude/agents/: code-reviewer.md  pr-writer.md
.claude/commands/: test.md
.claude/skills/: cli-patterns.md  github-actions.md  typescript-patterns.md  vitest-testing.md
.github/workflows/: publish.yml
src/: index.ts
src/commands/: add-skill.ts  init.ts  install.ts  new.ts  package.ts
src/generator/: index.ts  parser.ts  prompts.ts
src/packager/: index.ts  manifest.ts
src/scaffolder/: index.ts  questions.ts
src/scanner/: detect-auth.ts  detect-database.ts  detect-framework.ts  detect-language.ts  detect-linting.ts  detect-services.ts  detect-testing.ts  index.ts  read-readme.ts  read-structure.ts  types.ts
src/smidge/: auth.ts  index.ts
src/utils/: api-key.ts  config.ts  logger.ts  version.ts
src/writer/: index.ts
tests/fixtures/bare-project/: package.json
tests/fixtures/express-api/: package.json
tests/fixtures/fastapi-app/: pyproject.toml
tests/fixtures/go-service/: go.mod
tests/fixtures/nextjs-app/: README.md  package.json  tsconfig.json
tests/generator/: parser.test.ts  templates.test.ts
tests/packager/: packager.test.ts
tests/scanner/: scanner.test.ts
tests/utils/: api-key.test.ts  config.test.ts
